--- a/main.css
+++ b/main.css
@@ -41,12 +41,12 @@ h1, h2, h3, h4, h4, .display {
 
 .bg-blue {
   background-color: blue;
-  color: white !important;
+  color: white;
 }
 
 .bg-green {
   background-color: green;
-  color: white !important;
+  color: white;
 }
 
 a {
@@ -68,48 +68,6 @@ a:not(.custom-link):hover {
 
 a:visited {
   color: blue;
-}
-
-.box-link {
-  display: -ms-grid;
-  display: grid;
-  place-items: center;
-  border: none;
-  text-align: center;
-  color: black;
-  font-weight: bold;
-  position: relative;
-  z-index: 1;
-  overflow: hidden;
-  text-decoration: underline;
-}
-
-.box-link::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background-color: yellow;
-  z-index: -1;
-  -webkit-transform: skewX(-40deg) scaleX(0);
-          transform: skewX(-40deg) scaleX(0);
-  -webkit-transform-origin: right;
-          transform-origin: right;
-  width: 200%;
-  left: -25%;
-  -webkit-transition: -webkit-transform 320ms ease-in;
-  transition: -webkit-transform 320ms ease-in;
-  transition: transform 320ms ease-in;
-  transition: transform 320ms ease-in, -webkit-transform 320ms ease-in;
-}
-
-.box-link:hover::before {
-  -webkit-transform: skewX(-40deg) scaleX(1);
-          transform: skewX(-40deg) scaleX(1);
-  -webkit-transform-origin: left;
-          transform-origin: left;
 }
 
 /*=====================NAV=====================*/
@@ -213,10 +171,10 @@ nav a {
   margin: 5vh 0;
   z-index: 1;
   font-size: calc(var(--hero-height) * 0.5);
-  -webkit-transition: -webkit-transform 270ms ease-in, -webkit-box-shadow 270ms ease-in;
-  transition: -webkit-transform 270ms ease-in, -webkit-box-shadow 270ms ease-in;
-  transition: transform 270ms ease-in, box-shadow 270ms ease-in;
-  transition: transform 270ms ease-in, box-shadow 270ms ease-in, -webkit-transform 270ms ease-in, -webkit-box-shadow 270ms ease-in;
+  -webkit-transition: -webkit-transform 270ms ease-in, -webkit-box-shadow 270ms ease-in;
+  transition: -webkit-transform 270ms ease-in, -webkit-box-shadow 270ms ease-in;
+  transition: transform 270ms ease-in, box-shadow 270ms ease-in;
+  transition: transform 270ms ease-in, box-shadow 270ms ease-in, -webkit-transform 270ms ease-in, -webkit-box-shadow 270ms ease-in;
   -webkit-transform: translateX(100vw);
           transform: translateX(100vw);
 }
@@ -528,6 +486,10 @@ section .section-container p:last-of-type {
   text-decoration: underline;
 }
 
+#portfolio .button-grid a.bg-blue, #portfolio .button-grid a.bg-green {
+  color: white;
+}
+
 #portfolio .button-grid a::before {
   content: "";
   position: absolute;
@@ -535,7 +497,7 @@ section .section-container p:last-of-type {
   left: 0;
   height: 100%;
   width: 100%;
-  background-color: orange;
+  background-color: yellow;
   z-index: -1;
   -webkit-transform: skewX(-40deg) scaleX(0);
           transform: skewX(-40deg) scaleX(0);
@@ -547,6 +509,10 @@ section .section-container p:last-of-type {
   transition: -webkit-transform 320ms ease-in;
   transition: transform 320ms ease-in;
   transition: transform 320ms ease-in, -webkit-transform 320ms ease-in;
+}
+
+#portfolio .button-grid a:hover {
+  color: blue;
 }
 
 #portfolio .button-grid a:hover::before {
@@ -685,7 +651,7 @@ footer {
       grid-template-columns: 1fr 1fr 1fr;
   -ms-grid-rows: (minmax(1rem, auto))[5];
       grid-template-rows: repeat(5, minmax(1rem, auto));
-      grid-template-areas: "f1 f1 f2" "f3 f4 f2" "f3 f5 f6" "f7 f8 f8" "f7 f9 f10";
+      grid-template-areas: "f1 f1 f2" "f3 f4 f2" "f3 f5 f6" "f7 f8 f8" "f7 f9 f10";
   text-align: center;
   border: 4px solid black;
   background-color: white;
