--- a/main.css
+++ b/main.css
@@ -70,6 +70,58 @@ a:visited {
   color: blue;
 }
 
+.custom-link--box {
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  text-align: center;
+  font-weight: bold;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+  text-decoration: underline;
+}
+
+.custom-link--box.bg-blue, .custom-link--box.bg-green {
+  color: white;
+}
+
+.custom-link--box.bg-red {
+  color: black;
+}
+
+.custom-link--box::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: yellow;
+  z-index: -1;
+  -webkit-transform: skewX(-40deg) scaleX(0);
+          transform: skewX(-40deg) scaleX(0);
+  -webkit-transform-origin: right;
+          transform-origin: right;
+  width: 200%;
+  left: -25%;
+  -webkit-transition: -webkit-transform 320ms ease-in;
+  transition: -webkit-transform 320ms ease-in;
+  transition: transform 320ms ease-in;
+  transition: transform 320ms ease-in, -webkit-transform 320ms ease-in;
+}
+
+.custom-link--box:hover {
+  color: blue;
+}
+
+.custom-link--box:hover::before {
+  -webkit-transform: skewX(-40deg) scaleX(1);
+          transform: skewX(-40deg) scaleX(1);
+  -webkit-transform-origin: left;
+          transform-origin: left;
+}
+
 /*=====================NAV=====================*/
 :root {
   --nav-transition-time: 400ms;
@@ -171,10 +223,10 @@ nav a {
   margin: 5vh 0;
   z-index: 1;
   font-size: calc(var(--hero-height) * 0.5);
-  -webkit-transition: -webkit-transform 270ms ease-in, -webkit-box-shadow 270ms ease-in;
-  transition: -webkit-transform 270ms ease-in, -webkit-box-shadow 270ms ease-in;
-  transition: transform 270ms ease-in, box-shadow 270ms ease-in;
-  transition: transform 270ms ease-in, box-shadow 270ms ease-in, -webkit-transform 270ms ease-in, -webkit-box-shadow 270ms ease-in;
+  -webkit-transition: -webkit-transform 270ms ease-in, -webkit-box-shadow 270ms ease-in;
+  transition: -webkit-transform 270ms ease-in, -webkit-box-shadow 270ms ease-in;
+  transition: transform 270ms ease-in, box-shadow 270ms ease-in;
+  transition: transform 270ms ease-in, box-shadow 270ms ease-in, -webkit-transform 270ms ease-in, -webkit-box-shadow 270ms ease-in;
   -webkit-transform: translateX(100vw);
           transform: translateX(100vw);
 }
@@ -471,55 +523,8 @@ section .section-container p:last-of-type {
 }
 
 #portfolio .button-grid a {
-  display: -ms-grid;
-  display: grid;
-  place-items: center;
-  border: none;
-  text-align: center;
   padding: 1em 0;
   font-size: 1rem;
-  color: black;
-  font-weight: bold;
-  position: relative;
-  z-index: 1;
-  overflow: hidden;
-  text-decoration: underline;
-}
-
-#portfolio .button-grid a.bg-blue, #portfolio .button-grid a.bg-green {
-  color: white;
-}
-
-#portfolio .button-grid a::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background-color: yellow;
-  z-index: -1;
-  -webkit-transform: skewX(-40deg) scaleX(0);
-          transform: skewX(-40deg) scaleX(0);
-  -webkit-transform-origin: right;
-          transform-origin: right;
-  width: 200%;
-  left: -25%;
-  -webkit-transition: -webkit-transform 320ms ease-in;
-  transition: -webkit-transform 320ms ease-in;
-  transition: transform 320ms ease-in;
-  transition: transform 320ms ease-in, -webkit-transform 320ms ease-in;
-}
-
-#portfolio .button-grid a:hover {
-  color: blue;
-}
-
-#portfolio .button-grid a:hover::before {
-  -webkit-transform: skewX(-40deg) scaleX(1);
-          transform: skewX(-40deg) scaleX(1);
-  -webkit-transform-origin: left;
-          transform-origin: left;
 }
 
 .portfolio-entry {
@@ -651,7 +656,7 @@ footer {
       grid-template-columns: repeat(3, 1fr);
   -ms-grid-rows: (minmax(1rem, auto))[5];
       grid-template-rows: repeat(5, minmax(1rem, auto));
-      grid-template-areas: "f1 f1 f2" "f3 f4 f2" "f3 f5 f6" "f7 f8 f8" "f7 f9 f10";
+      grid-template-areas: "f1 f1 f2" "f3 f4 f2" "f3 f5 f6" "f7 f8 f8" "f7 f9 f10";
   text-align: center;
   border: 4px solid black;
   background-color: white;
