--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'PT Mono', monospace;
-  background: cornsilk;
+  background: #e4c1f9;
   min-height: 100vh;
   overflow-x: hidden;
   margin: 0;
@@ -11,42 +11,53 @@ h1, h2, h3, h4, h4, .display {
   font-family: 'Major Mono Display', monospace;
 }
 
-.ft-red {
-  color: red;
+:root {
+  --col-1: #011627;
+  --col-2: #f71735;
+  --col-3: #41ead4;
+  --col-4: #ff9f1c;
+  --col-5: #fdfffc;
 }
 
-.ft-blue {
-  color: blue;
+.ft-1 {
+  color: var(--col-1);
 }
 
-.ft-green {
-  color: green;
+.ft-2 {
+  color: var(--col-2);
 }
 
-.ft-yellow {
-  color: yellow;
+.ft-3 {
+  color: var(--col-3);
 }
 
-.bg-red {
-  background-color: red;
+.ft-4 {
+  color: var(--col-4);
 }
 
-.bg-gray {
-  background-color: lightgray;
+.ft-5 {
+  color: var(--col-5);
 }
 
-.bg-white {
-  background-color: white;
+.bg-1 {
+  background-color: var(--col-1);
+  color: var(--col-5) !important;
 }
 
-.bg-blue {
-  background-color: blue;
-  color: white;
+.bg-2 {
+  background-color: var(--col-2);
 }
 
-.bg-green {
-  background-color: green;
-  color: white;
+.bg-3 {
+  background-color: var(--col-3);
+}
+
+.bg-4 {
+  background-color: var(--col-5);
+}
+
+.bg-5 {
+  background-color: var(--col-5);
 }
 
 a {
@@ -56,8 +67,8 @@ a {
 a:not(.custom-link) {
   -webkit-transition: background-size 270ms ease-in;
   transition: background-size 270ms ease-in;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(yellow), to(yellow));
-  background-image: linear-gradient(yellow 0%, yellow 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(var(--col-4)), to(var(--col-4)));
+  background-image: linear-gradient(var(--col-4) 0%, var(--col-4) 100%);
   background-size: 0% 100%;
   background-repeat: no-repeat;
 }
@@ -82,14 +93,6 @@ a:visited {
   text-decoration: underline;
 }
 
-.custom-link--box.bg-blue, .custom-link--box.bg-green {
-  color: white;
-}
-
-.custom-link--box.bg-red {
-  color: black;
-}
-
 .custom-link--box::before {
   content: "";
   position: absolute;
@@ -97,7 +100,7 @@ a:visited {
   left: 0;
   height: 100%;
   width: 100%;
-  background-color: yellow;
+  background-color: var(--col-4);
   z-index: -1;
   -webkit-transform: skewX(-40deg) scaleX(0);
           transform: skewX(-40deg) scaleX(0);
@@ -165,7 +168,7 @@ nav::before {
   width: 200vw;
   left: -100vw;
   opacity: 0;
-  background-color: black;
+  background-color: var(--col-1);
   -webkit-transform: scale(0);
           transform: scale(0);
   -webkit-transition: opacity var(--nav-transition-time) ease-out;
@@ -178,7 +181,7 @@ nav button {
   font-family: inherit;
   width: 25vh;
   height: 12.5vh;
-  background: orange;
+  background: transparent;
   border-radius: 25vh 25vh 0 0;
   -webkit-transform-origin: center;
           transform-origin: center;
@@ -203,7 +206,8 @@ nav button::before {
   height: 100%;
   width: 100%;
   height: 200%;
-  background-color: orange;
+  background-color: var(--col-3);
+  background-image: linear-gradient(45deg, var(--col-4) 50%, var(--col-3) 50%);
   z-index: -1;
   border-radius: 50%;
   -webkit-transform: rotate(135deg) scale(1);
@@ -212,8 +216,8 @@ nav button::before {
   transition: -webkit-transform var(--nav-transition-time) ease-in;
   transition: transform var(--nav-transition-time) ease-in;
   transition: transform var(--nav-transition-time) ease-in, -webkit-transform var(--nav-transition-time) ease-in;
-  border: 8px solid black;
-  border-color: black black orange orange;
+  border: 8px solid var(--col-1);
+  border-color: var(--col-1) var(--col-1) var(--col-4) var(--col-4);
   top: -8px;
   left: -8px;
 }
@@ -239,7 +243,7 @@ nav a::before, nav a::after {
   height: 100%;
   width: 100%;
   height: 8px;
-  background-color: yellow;
+  background-color: var(--col-4);
   -webkit-transition: -webkit-transform 270ms ease-in;
   transition: -webkit-transform 270ms ease-in;
   transition: transform 270ms ease-in;
@@ -294,7 +298,7 @@ nav.max button::before {
           transition-delay: 0ms;
   -webkit-transform: rotate(-45deg) scale(6) translate(-25%, 25%);
           transform: rotate(-45deg) scale(6) translate(-25%, 25%);
-  border-color: black;
+  border-color: var(--col-1);
 }
 
 /*====================HERO====================*/
@@ -342,16 +346,16 @@ nav.max button::before {
 }
 
 .ghost__body-top, .ghost__body-low, .ghost__tail, .ghost__eye {
-  fill: white;
+  fill: var(--col-5);
 }
 
 .ghost__eye {
-  stroke: black;
+  stroke: var(--col-1);
   stroke-width: 5;
 }
 
 .ghost__shadow {
-  fill: black;
+  fill: var(--col-1);
   stroke: none;
 }
 
@@ -398,8 +402,8 @@ section {
 section h2 {
   font-size: 3rem;
   margin: 0;
-  background: white;
-  border: 8px solid black;
+  background: var(--col-5);
+  border: 8px solid var(--col-1);
   padding: 8px var(--section-padding);
   overflow: hidden;
   position: relative;
@@ -414,8 +418,8 @@ section h2 .char {
 section aside {
   height: 200px;
   width: 200px;
-  border: 8px solid black;
-  background-color: orange;
+  border: 8px solid var(--col-1);
+  background-color: var(--col-3);
   overflow: hidden;
 }
 
@@ -449,8 +453,8 @@ section aside img {
 }
 
 section .section-container {
-  background: white;
-  border: 8px solid black;
+  background: var(--col-5);
+  border: 8px solid var(--col-1);
   border-top: none;
   margin: 0 auto;
   padding: var(--section-padding);
@@ -499,7 +503,7 @@ section .section-container p:last-of-type {
 
 #portfolio .portfolio-header {
   z-index: 2;
-  border-bottom: 8px solid black;
+  border-bottom: 8px solid var(--col-1);
 }
 
 #portfolio .portfolio-header h2 {
@@ -517,9 +521,9 @@ section .section-container p:last-of-type {
   -ms-grid-columns: (minmax(140px, 1fr))[auto-fit];
       grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
   grid-gap: 8px;
-  background-color: black;
-  border-left: 8px solid black;
-  border-right: 8px solid black;
+  background-color: var(--col-1);
+  border-left: 8px solid var(--col-1);
+  border-right: 8px solid var(--col-1);
 }
 
 #portfolio .button-grid a {
@@ -532,7 +536,7 @@ section .section-container p:last-of-type {
   position: relative;
   overflow: hidden;
   text-align: center;
-  border-top: 8px solid black;
+  border-top: 8px solid var(--col-1);
 }
 
 .portfolio-entry:first-of-type {
@@ -544,7 +548,7 @@ section .section-container p:last-of-type {
   margin: calc(var(--section-padding) * -1);
   margin-bottom: var(--section-padding);
   padding: var(--section-padding);
-  border-bottom: 8px solid black;
+  border-bottom: 8px solid var(--col-1);
 }
 
 .portfolio-entry .portfolio-entry__title h3 {
@@ -589,7 +593,7 @@ section .section-container p:last-of-type {
 
 .portfolio-entry:nth-of-type(4n+1) .col-l {
   padding: var(--section-padding);
-  border-right: 8px solid black;
+  border-right: 8px solid var(--col-1);
 }
 
 @media (max-width: 500px) {
@@ -633,7 +637,7 @@ section .section-container p:last-of-type {
 
 .portfolio-entry:nth-of-type(4n+3) .col-r {
   padding: var(--section-padding);
-  border-right: 8px solid black;
+  border-right: 8px solid var(--col-1);
 }
 
 @media (max-width: 500px) {
@@ -662,15 +666,15 @@ footer {
       grid-template-rows: repeat(5, minmax(1rem, auto));
       grid-template-areas: "f1 f1 f2" "f3 f4 f2" "f3 f5 f6" "f7 f8 f8" "f7 f9 f10";
   text-align: center;
-  border: 4px solid black;
-  background-color: white;
+  border: 4px solid var(--col-1);
+  background-color: var(--col-5);
 }
 
 footer h3 {
   display: -ms-grid;
   display: grid;
   place-items: center;
-  border: 4px solid black;
+  border: 4px solid var(--col-1);
   padding: 0.5rem 0;
   font-size: 1.5rem;
   margin: 0;
@@ -700,7 +704,7 @@ footer .main-link {
   display: -ms-grid;
   display: grid;
   place-items: center;
-  border: 4px solid black;
+  border: 4px solid var(--col-1);
   padding: 0.5rem 0;
   font-size: 1.2rem;
 }
@@ -725,7 +729,7 @@ footer .main-link:nth-of-type(3) {
 }
 
 footer .sub-link-container {
-  border: 4px solid black;
+  border: 4px solid var(--col-1);
   padding: 0.5rem 0;
   -ms-grid-row: 4;
   -ms-grid-row-span: 2;
@@ -740,7 +744,7 @@ footer .sub-link-container li {
 }
 
 footer .block {
-  border: 4px solid black;
+  border: 4px solid var(--col-1);
   padding: 0.5rem 0;
 }
 
