--- a/main.scss
+++ b/main.scss
@@ -177,6 +177,7 @@ nav {
 			// Double height to make equal width & height
 			height: 200%;
 			background-color: var(--col-3);
+			background-image: linear-gradient(45deg, var(--col-4) 50%, var(--col-3) 50%);
 			// Pull behind button
 			z-index: -1;
 			// Make circle
