--- a/main.scss
+++ b/main.scss
@@ -259,6 +259,7 @@ nav {
 			transition-delay: 0ms;
 			transform: rotate(-45deg) scale(6) translate(-25%, 25%);
 			border-color: var(--col-1);
+			background-size: 100% 150%;
 		}
 	}
 }
