--- a/main.css
+++ b/main.css
@@ -196,7 +196,7 @@ nav button {
   cursor: pointer;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 576px) {
   nav button {
     top: 2vh;
   }
@@ -308,7 +308,7 @@ nav.max button::before {
   --hero-height: 10vw;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 576px) {
   :root {
     --hero-height: 21vw;
   }
@@ -338,7 +338,7 @@ nav.max button::before {
   text-shadow: 5px 5px 0px var(--col-1);
 }
 
-@media (max-width: 500px) {
+@media (max-width: 576px) {
   #hero .char {
     text-shadow: 4px 2px 0px var(--col-1);
   }
@@ -376,8 +376,8 @@ nav.max button::before {
 /*====================HEAD====================*/
 #head {
   position: fixed;
-  top: 2%;
-  left: 2%;
+  top: 8px;
+  left: 8px;
   z-index: 1000;
   -webkit-transform: translateY(-200%);
           transform: translateY(-200%);
@@ -403,7 +403,7 @@ nav.max button::before {
   --section-padding: 2rem;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 576px) {
   :root {
     --section-padding: 1rem;
   }
@@ -453,7 +453,7 @@ section aside.aside--right {
   border-radius: 0 0 0 50%;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 576px) {
   section aside {
     height: 150px;
     width: 150px;
@@ -484,7 +484,7 @@ section .section-container p:last-of-type {
   margin-bottom: 0;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 576px) {
   section {
     max-width: 90%;
   }
@@ -505,13 +505,13 @@ section .section-container p:last-of-type {
   padding-bottom: 15vh;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 576px) {
   #contact .section-container p:first-of-type {
     margin-top: 7rem;
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 576px) {
   #contact .section-container {
     padding-bottom: var(--section-padding);
   }
@@ -522,7 +522,7 @@ section .section-container p:last-of-type {
   border-bottom: 8px solid var(--col-1);
 }
 
-@media (max-width: 500px) {
+@media (max-width: 576px) {
   #portfolio .portfolio-header h2 {
     font-size: 2rem;
   }
@@ -585,7 +585,7 @@ section .section-container p:last-of-type {
       justify-content: space-around;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 576px) {
   .portfolio-entry .portfolio-entry__links {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -613,7 +613,7 @@ section .section-container p:last-of-type {
   border-right: 8px solid var(--col-1);
 }
 
-@media (max-width: 500px) {
+@media (max-width: 576px) {
   .portfolio-entry:nth-of-type(4n+1) .col-l {
     border-right: none;
     padding-bottom: 0;
@@ -624,7 +624,7 @@ section .section-container p:last-of-type {
   padding: var(--section-padding);
 }
 
-@media (max-width: 500px) {
+@media (max-width: 576px) {
   .portfolio-entry:nth-of-type(4n+1) .col-r {
     border-right: none;
     padding-top: 0;
@@ -646,7 +646,7 @@ section .section-container p:last-of-type {
   padding: var(--section-padding);
 }
 
-@media (max-width: 500px) {
+@media (max-width: 576px) {
   .portfolio-entry:nth-of-type(4n+3) .col-l {
     padding-bottom: 0;
   }
@@ -657,14 +657,14 @@ section .section-container p:last-of-type {
   border-right: 8px solid var(--col-1);
 }
 
-@media (max-width: 500px) {
+@media (max-width: 576px) {
   .portfolio-entry:nth-of-type(4n+3) .col-r {
     border-right: none;
     padding-top: 0;
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 576px) {
   .portfolio-entry {
     -webkit-box-orient: vertical !important;
     -webkit-box-direction: normal !important;
