--- a/main.css
+++ b/main.css
@@ -706,17 +706,37 @@ footer .main-link:nth-of-type(3) {
 
 footer .sub-link-container {
   border: 4px solid var(--col-1);
-  padding: 0.5rem 0;
   -ms-grid-row: 4;
   -ms-grid-row-span: 2;
   -ms-grid-column: 1;
   grid-area: f7;
   list-style: none;
   margin: 0;
+  padding: 0;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: (auto)[3];
+      grid-template-rows: repeat(3, auto);
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-areas: "header header";
+  grid-gap: 8px;
+  background-color: var(--col-1);
 }
 
-footer .sub-link-container li {
-  margin-bottom: 0.5rem;
+footer .sub-link-container li a {
+  display: inline-block;
+  width: 100%;
+  padding: 5px 0;
+  background-color: var(--col-5);
+}
+
+footer .sub-link-container li:first-of-type {
+  padding: 5px 0;
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: header;
 }
 
 footer .block {
