--- a/main.css
+++ b/main.css
@@ -2,8 +2,13 @@ body {
   font-family: 'PT Mono', monospace;
   background: #e4c1f9;
   min-height: 100vh;
+  min-height: -webkit-fill-available;
   overflow-x: hidden;
   margin: 0;
+}
+
+html {
+  height: -webkit-fill-available;
 }
 
 h1, h2, h3, h4, h4, .display {
