--- a/main.scss
+++ b/main.scss
@@ -38,7 +38,6 @@ h1,h2,h3,h4,h4,.display {
 .bg-5 {background-color: var(--col-5);}
 
 $border: 8px solid var(--col-1);
-$half-border: 4px solid var(--col-1);
 $mobile: 576px;
 $z-top: 1000;
 
@@ -617,15 +616,13 @@ footer {
 		"f7 f8 f8"
 		"f7 f9 f10";
 	text-align: center;
-	// Half border to combine with grid item borders
-	border: $half-border;
-	background-color: var(--col-5);
+	background-color: var(--col-1);
+	grid-gap: 8px;
+	border: $border;
 
 	h3 {
 		// Center in grid cell
 		@include grid-center();
-		// Half border to combine with cell/outer border
-		border: $half-border;
 		padding: 0.5rem 0;
 		font-size: 1.5rem;
 		margin: 0;
@@ -638,10 +635,9 @@ footer {
 	.main-link {
 		// Center in grid cell
 		@include grid-center();
-		// Half border to combine with cell/outer border
-		border: $half-border;
 		padding: 0.5rem 0;
 		font-size: 1.2rem;
+		background-color: var(--col-5);
 		// Assign grid areas
 		&:nth-of-type(1) {grid-area: f4;}
 		&:nth-of-type(2) {grid-area: f8;}
@@ -649,8 +645,6 @@ footer {
 	}
 
 	.sub-link-container {
-		// Half border to combine with cell/outer border
-		border: $half-border;
 		grid-area: f7;
 		// Clear list styling
 		list-style: none;
@@ -687,8 +681,6 @@ footer {
 	}
 
 	.block {
-		// Half border to combine with cell/outer border
-		border: $half-border;
 		padding: 0.5rem 0;
 		// Assign grid areas
 		&:nth-of-type(1){grid-area: f3};
