--- a/main.scss
+++ b/main.scss
@@ -1,6 +1,7 @@
 body {
 	font-family: 'PT Mono', monospace;
 	background: #e4c1f9;
+	background: linear-gradient(90deg, rgba(228,193,249,1) 70%, #D7A2F6 100%);
 	min-height: 100vh;
 	min-height: -webkit-fill-available;
 	overflow-x: hidden;
