--- a/main.css
+++ b/main.css
@@ -63,6 +63,25 @@ h1, h2, h3, h4, h4, .display {
   background-color: var(--col-5);
 }
 
+/* Entire scrollbar */
+html::-webkit-scrollbar {
+  width: 40px;
+  height: 30px;
+}
+
+/* Scrollbar button  */
+html::-webkit-scrollbar-thumb {
+  background: var(--col-3);
+  border: 8px solid var(--col-1);
+}
+
+/* Scrollbar background */
+html::-webkit-scrollbar-track {
+  background: var(--col-5);
+  border-left: 8px solid var(--col-1);
+  border-right: 8px solid var(--col-1);
+}
+
 a {
   text-decoration: none;
 }
@@ -655,7 +674,7 @@ footer {
       grid-template-columns: repeat(3, 1fr);
   -ms-grid-rows: (minmax(1rem, auto))[5];
       grid-template-rows: repeat(5, minmax(1rem, auto));
-      grid-template-areas: "f1 f1 f2" "f3 f4 f2" "f3 f5 f6" "f7 f8 f8" "f7 f9 f10";
+      grid-template-areas: "f1 f1 f2" "f3 f4 f2" "f3 f5 f6" "f7 f8 f8" "f7 f9 f10";
   text-align: center;
   background-color: var(--col-1);
   grid-gap: 8px;
