--- a/main.scss
+++ b/main.scss
@@ -61,6 +61,28 @@ $z-top: 1000;
 	mix-blend-mode: multiply;
 }
 
+// ====================Scrollbar====================
+
+/* Entire scrollbar */
+html::-webkit-scrollbar {
+	width: 40px;
+	height: 30px;
+}
+
+/* Scrollbar button  */
+html::-webkit-scrollbar-thumb {
+	background: var(--col-3);
+	border: $border;
+}
+
+/* Scrollbar background */
+html::-webkit-scrollbar-track {
+	background: var(--col-5);
+	border-left: $border;
+	border-right: $border;
+}
+
+// =========================Links=========================
 
 a {
 	// Set default link styling
